[ADD] Unit Tests with MemoryStorage + Jest config + README + Swagger docs
